crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__dlr_manifest__dlr_manifest_sorbet_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/dlr_manifest.rs
expression: dlr_manifest.sorbet_schema.format_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/my/entity:example.MyPoints:colors: List(UInt32) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:colors"
    dalaran:component_type: "example.MyColor"
    dalaran:entity_path: "/my/entity"
    dalaran:kind: "data"
]
/my/entity:example.MyPoints:labels: List(Utf8) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:labels"
    dalaran:component_type: "example.MyLabel"
    dalaran:entity_path: "/my/entity"
    dalaran:is_static: "true"
    dalaran:kind: "data"
]
/my/entity:example.MyPoints:points: List(Struct("x": non-null Float32, "y": non-null Float32)) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:points"
    dalaran:component_type: "example.MyPoint"
    dalaran:entity_path: "/my/entity"
    dalaran:kind: "data"
]
frame_nr: Int64 [
    dalaran:index_name: "frame_nr"
    dalaran:kind: "index"
]
dalaran.controls.RowId: non-null FixedSizeBinary(16) [
    ARROW:extension:metadata: "{\"namespace\":\"row\"}"
    ARROW:extension:name: "dalaran.datatypes.TUID"
    dalaran:kind: "control"
]
