crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__dlr_manifest__fetch_chunks_from_dlr_manifest.snap
---
source: crates/store/dl_redap_tests/src/tests/dlr_manifest.rs
expression: printed
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                │
│ * entity_path: /my/entity                                                                                                                                                │
│ * id: chunk_00000000000000010000000000000001                                                                                                                             │
│ * version: 0.1.3                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────┬────────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ frame_nr             ┆ example.MyPoints:colors            ┆ example.MyPoints:points                                  │ │
│ │ ---                                           ┆ ---                  ┆ ---                                ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Int64          ┆ type: List(UInt32)                 ┆ type: List(Struct("x": non-null Float32, "y": non-null   │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: frame_nr ┆ archetype: example.MyPoints        ┆ Float32))                                                │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true      ┆ component: example.MyPoints:colors ┆ archetype: example.MyPoints                              │ │
│ │ is_sorted: true                               ┆ kind: index          ┆ component_type: example.MyColor    ┆ component: example.MyPoints:points                       │ │
│ │ kind: control                                 ┆                      ┆ kind: data                         ┆ component_type: example.MyPoint                          │ │
│ │                                               ┆                      ┆                                    ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════╪════════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_00000000000000010000000000000001          ┆ 10                   ┆ [0]                                ┆ [{x: 0.0, y: 0.0}]                                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000002          ┆ 20                   ┆ [1]                                ┆ [{x: 1.0, y: 1.0}]                                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000003          ┆ 30                   ┆ [2]                                ┆ [{x: 2.0, y: 2.0}]                                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000004          ┆ 40                   ┆ [3]                                ┆ [{x: 3.0, y: 3.0}]                                       │ │
│ └───────────────────────────────────────────────┴──────────────────────┴────────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                              │
│ * entity_path: /my/entity                                                              │
│ * id: chunk_00000000000000010000000000000002                                           │
│ * version: 0.1.3                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                         ┆ example.MyPoints:labels            │ │
│ │ ---                                           ┆ ---                                │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: List(Utf8)                   │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ archetype: example.MyPoints        │ │
│ │ ARROW:extension:name: TUID                    ┆ component: example.MyPoints:labels │ │
│ │ is_sorted: true                               ┆ component_type: example.MyLabel    │ │
│ │ kind: control                                 ┆ kind: data                         │ │
│ ╞═══════════════════════════════════════════════╪════════════════════════════════════╡ │
│ │ row_00000000000000010000000000000005          ┆ [simple]                           │ │
│ └───────────────────────────────────────────────┴────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────┘
