crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__dlr_manifest__layered_segment_dlr_manifest_1_all_there_sorbet_schema_sha256.snap
---
source: crates/store/dl_redap_tests/src/tests/dlr_manifest.rs
expression: "dlr_manifest.sorbet_schema_sha256.iter().map(|b|\nformat!(\"{b:02x}\")).collect::<String>()"
---
ec802bca32cdf0a913ecddcde2c6b8c868cc4f1fce727224f3fbc15443883809
