crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__dlr_manifest__layered_segment_dlr_manifest_2_base_removed_sorbet_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/dlr_manifest.rs
expression: dlr_manifest.sorbet_schema.format_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/data:test: List(Float32) [
    dalaran:component: "test"
    dalaran:entity_path: "/data"
    dalaran:is_static: "true"
    dalaran:kind: "data"
]
dalaran.controls.RowId: non-null FixedSizeBinary(16) [
    ARROW:extension:metadata: "{\"namespace\":\"row\"}"
    ARROW:extension:name: "dalaran.datatypes.TUID"
    dalaran:kind: "control"
]
